--- a/src/App.css
+++ b/src/App.css
@@ -152,6 +152,50 @@ a{
   font-weight: 400;
 }
 
+#About{
+  background-color: white;
+}
+
+#About h2{
+  text-align: center;
+  font-size: 2.4em;
+  font-weight: 400;
+  margin-bottom: 10px;
+}
+
+.line{
+  margin: auto;
+  width: 100px;
+  height: 4px;
+  background-color: #3d9970;
+  border-radius: 4px;
+  align-self: center;
+}
+
+.aboutHero{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  padding: 20px;
+}
+
+.aboutHero .text{
+  width: 100%;
+  height: max-content;
+}
+
+.aboutHero .text p{
+  font-size: 1.3em;
+  font-weight: 300;
+}
+
+.aboutHero .image{
+  width: 100%;
+  height: 400px;
+  background-color: #ecfffb;
+}
+
+
 /* Media Queries */
 /* Small devices (phones, 320px and up) */
 @media (min-width: 320px) and (max-width: 768px) {
@@ -197,6 +241,22 @@ a{
     width: 70%;
     height: fit-content;
   }
+
+  #About h2{
+    font-size: 2em;
+  }
+
+  .aboutHero{
+    flex-direction: column;
+  }
+
+  .aboutHero .image{
+    height: 250px;
+  }
+
+  .aboutHero .text p{
+    font-size: 1.1em;
+  }
 }
 
 /* Medium devices (tablets, 768px and up) */
@@ -215,20 +275,3 @@ a{
   }
   
 }
-
-
-
-
-/* Dark mode */
-/* @media (prefers-color-scheme: dark) {
-  :root {
-      --bg-color: #121212;
-      --text-color: #ffffff;
-  }
-  
-  body {
-      background-color: var(--bg-color);
-      color: var(--text-color);
-  }
-} */
-
