--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@
 a{
   text-decoration: none;
   cursor: pointer;
+  color: white;
 }
 
 .logo{
@@ -93,6 +94,8 @@ a{
   color: white;
   margin-top: 1em;
   cursor: pointer;
+  display: flex;
+  justify-self: center;
 }
 
 #Hero .texts button:hover{
@@ -115,7 +118,7 @@ a{
   margin-bottom: 2em;
 }
 
-.serviceContents{
+.serviceContents, .aboutContents{
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -126,8 +129,9 @@ a{
   font-size: 2em;
   font-weight: 400;
   color: #3d9970;
+  margin-bottom: 1em;
 }
-.serviceContents .icon{
+.serviceContents .icon, .aboutContents .icon{
   color: #3d9970;
   height: 30px;
   width: 30px;
@@ -140,10 +144,18 @@ a{
   height: 310px;
 }
 
+.aboutContents .cont{
+  width: 20%;
+  background-color: rgba(255, 255, 255, 0.8);
+  text-align: center;
+  height: 200px;
+}
+
 #Gallery h2{
   text-align: center;
   font-size: 2em;
   font-weight: 400;
+  margin-bottom: 1em;
 }
 
 #Gallery p{
@@ -152,8 +164,20 @@ a{
   font-weight: 400;
 }
 
-#About{
-  background-color: white;
+#Gallery .images{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.images .image{
+  width: 40%;
+  height: 400px;
+}
+
+#About .abouthead{
+  color: #3d9970;
 }
 
 #About h2{
@@ -171,6 +195,7 @@ a{
   border-radius: 4px;
   align-self: center;
 }
+
 
 .aboutHero{
   display: flex;
@@ -193,8 +218,105 @@ a{
   width: 100%;
   height: 400px;
   background-color: #ecfffb;
+  background-image:url(images/background-image.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 10px;
 }
 
+
+.container{
+  width: 90%;
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.1); 
+  background-color: rgba(255, 255, 255, 0.516);
+  display: flex;
+  justify-self: center;
+  border-radius: 16px;
+  margin-bottom: 4em;
+  margin-top: 3em;
+  margin-left: 5%;
+  margin-right: 5%;
+}
+
+.container .contactInfo{
+  width: 30%;
+  background-color: #3d9970;
+  border-radius: 16px 0 0 16px;
+  color: white;
+}
+
+.container .contactInfo a{
+  display: flex;
+  align-items: flex-start;
+}
+
+.container .contactform{
+  font-weight: 400;
+}
+
+.contactform input{
+  border: 0;
+  background-color: transparent;
+  border-bottom: 1.5px solid grey;
+  padding-top: 15px;
+  cursor: text;
+}
+
+
+.name .first, .name .second, .usercontact .first, .usercontact .second{
+  display: flex;
+  flex-direction: column;
+}
+
+.first,.second{
+  width: 45%;
+}
+
+.name .second label, .usercontact .second label, .enq h3{
+  color: #3d9970;
+}
+
+.name, .usercontact{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-bottom: 4em;
+}
+
+.enq .options{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-bottom: 4em;
+}
+
+.message{
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 4em;
+}
+
+.container button{
+  margin-bottom: 40px;
+  text-align: center;
+}
+
+#sub{
+  accent-color: #3d9970;
+  cursor: pointer;
+}
+
+footer{
+  background-color: #3d9970;
+  color: #ecfffb;
+  bottom: 0;
+  margin: 0;
+  padding: 8px;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
 
 /* Media Queries */
 /* Small devices (phones, 320px and up) */
@@ -217,6 +339,10 @@ a{
     display: none;  
   }
 
+  .menu{
+    display: none;
+  }
+
   #Hero{
     flex-direction: column;
   }
@@ -230,16 +356,21 @@ a{
     height: 100%;
   }  
 
-  .serviceContents{
+  .serviceContents, .aboutContents{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
   }
 
-  .serviceContents .cont{
+  .serviceContents .cont, .aboutContents .cont{
     width: 70%;
     height: fit-content;
+  }
+
+  .images .image{
+    height: 250px;
+    width: 80%;
   }
 
   #About h2{
@@ -247,7 +378,7 @@ a{
   }
 
   .aboutHero{
-    flex-direction: column;
+    flex-direction: column-reverse;
   }
 
   .aboutHero .image{
@@ -256,6 +387,61 @@ a{
 
   .aboutHero .text p{
     font-size: 1.1em;
+  }
+
+  .container{
+    flex-direction: column;
+    justify-self: center;
+  }
+
+  .container  .contactInfo{
+    width:100%;
+    border-radius:16px 16px 0 0 ;
+    text-align: center;
+    margin-bottom: 2em;
+  }
+
+  .container .contactform {
+    width: 100%;
+    padding-left: 15px;
+  }
+
+  .container .contactInfo a{
+    justify-content: center;
+    padding-bottom: 10px;
+    padding-top: 5px;
+  }
+
+  .name, .usercontact{
+    flex-direction: column;
+    margin-bottom: 0;
+  }
+
+  .first,.second{
+    width: 80%;
+    margin-bottom: 2em;
+  }
+
+  .enq .options{
+    flex-direction: column;
+  }
+
+  .enq .options .rad{
+    padding-bottom: 15px;
+    font-size: larger;
+    display: flex;
+    align-content: center;
+  }
+
+  .message{
+    width: 80%;
+  }
+
+  .container button{
+    margin-bottom: 20px;
+    text-align: center;
+    font-size: 1.2em;
+    padding: 10px 25px;
   }
 }
 
@@ -274,4 +460,13 @@ a{
       height:60px;
   }
   
+  .container .contactInfo{
+    padding-right: 100px;
+    padding: 15px;
+  }
+
+  .container .contactform{
+    width: 60%;
+    padding: 40px;
+  }
 }
