--- a/src/App.css
+++ b/src/App.css
@@ -338,8 +338,51 @@ footer{
   justify-content: center;
 }
 
+.storyContainer{
+  height: fit-content;
+  display: flex;
+  padding: 15px;
+  flex-direction: column;
+  justify-content: center;
+}
+
+#Story h2{
+  text-align: center;
+  font-size: 2em;
+  font-weight: 400;
+  color: #3d9970;
+  margin-bottom: 0;
+}
+
+#Story p{
+  font-size: 1em;
+  font-weight: 300;
+  text-align: center;
+  margin-top: 0;
+}
+
+.Story{
+  height: 62vh;
+  width: 90%;
+  margin: auto;
+}
+
+.story{
+  width: 100%;
+  height: 50vh;
+  resize: none;
+  overflow-y: auto;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 1.2em;
+}
+
+.storyButton{
+  margin-top: 8px;
+  justify-self: center;
+}
+
 /*.show{
-   width: 60vw;
+  width: 60vw;
   background-color: aqua;
   z-index: -100;
   display: block;
@@ -513,8 +556,8 @@ footer{
 .serviceContents {
   opacity: 0;
   transform: translateY(20px);
-  transition: opacity 0.6s ease-out, transform 0.6s ease-out;
-  transition-delay: 300ms;
+  transition: opacity 0.4s ease-out, transform 0.4s ease-out;
+  transition-delay: 150ms;
 }
 
 .serviceContents.services-content-visible {
@@ -525,7 +568,7 @@ footer{
 .service-item {
   opacity: 0;
   transform: translatey(100px);
-  transition: opacity 1.4s ease-out, transform 1.4s ease-out;
+  transition: opacity 0.8s ease-out, transform 0.8s ease-out;
 }
 
 .service-item.service-item-visible {
