--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@
   z-index: 100;
   position: fixed;
   align-items: center;
+  font-family:Georgia, 'Times New Roman', Times, serif;
 }
 
 a{
@@ -44,7 +45,7 @@ ul{
   right: 0;
   display: flex;
   flex-direction: row;
-  margin-right: 20px;
+  margin-right: 15px;
   justify-content: space-around;
   flex-wrap: wrap;
   align-items: center;
@@ -339,6 +340,7 @@ footer{
 }
 
 .storyContainer{
+  width: 85%;
   height: fit-content;
   display: flex;
   padding: 15px;
@@ -380,6 +382,57 @@ footer{
   margin-top: 8px;
   justify-self: center;
 }
+
+#Sponsor .firstOne{
+  text-align: center;
+  font-size: 1.6em;
+  font-weight: 400;
+  color: #3d9970;
+  margin-top: 10px;
+  margin-bottom: 5px;
+  padding-bottom: 0;
+}
+
+#Sponsor h3{
+  text-align: center;
+  font-style: italic;
+  font-size: 1.3em;
+  font-weight: 500;
+  color: #3d9970;
+  margin-top: 10px;
+}
+
+#Sponsor{
+  text-align: center;
+}
+
+#Sponsor h1{
+  text-align: center;
+  font-size: 2em;
+  font-weight: 400;
+  margin-bottom: 5px;
+  /* text-decoration: underline #3d9970; */
+}
+
+.sponsorContents p{
+  font-size: 1.2em;
+  font-weight: 320;
+}
+
+.sponsorContents{
+  width: 80%;
+  margin: auto;
+  padding: 20px;
+}
+
+.socialAccounts{
+  width: 80%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  justify-self: center;
+}
+
 
 /*.show{
   width: 60vw;
@@ -459,6 +512,7 @@ footer{
   }
 
   .container{
+    display: flex;
     flex-direction: column;
     justify-self: center;
   }
@@ -512,6 +566,11 @@ footer{
     font-size: 1.2em;
     padding: 10px 25px;
   }
+
+  .socialContent{
+    flex-direction: column;
+    margin: auto;
+  }
 }
 
 /* Medium devices (tablets, 768px and up) */
@@ -538,10 +597,8 @@ footer{
     width: 60%;
     padding: 40px;
   }
-}
 
-
-/* Services Section Transition Styles */
+  /* Services Section Transition Styles */
 .services-section {
   opacity: 0;
   transform: translateY(20px);
@@ -574,4 +631,5 @@ footer{
 .service-item.service-item-visible {
   opacity: 1;
   transform: translateY(0);
+}
 }
