--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@ body{
 button{
   border-radius: 2em;
   padding: 0.8em 2em;
+  margin-top: 10px;
   font-size: 1.2em;
   font-weight: 500;
   border: solid #3d9970;
