Added a respinsive Navbar

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 370;
+  --relapsafe-dark-green:#3d9970;
 }
 
 html{
@@ -12,6 +13,7 @@ html{
 body{
   margin: 0;
   padding: 0;
+  width: 100%;
   background-color: #ecfffb;
 }
   
