--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .Navbar{
   background-color: #ecfffb;
   top: 0;
-  width: 100dvw;
+  width: 100%;
   height: 50px;
   display: flex;
   flex-direction: row;
@@ -12,6 +12,10 @@
   position: fixed;
   align-items: center;
   font-family:Georgia, 'Times New Roman', Times, serif;
+}
+
+.heroImg{
+  border-radius: 2em;
 }
 
 a{
@@ -62,8 +66,45 @@ ul{
 .menu{
   width:30px;
   height:30px;
-  padding-right:20px;
+  margin-right:20px;
   color:grey;
+  display: none;
+}
+
+.sidebar{
+  height: 100vh;
+  width: 250px;
+  display: none;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  right: 0;
+  top: 0;
+  position: fixed;
+  z-index: 999;
+  margin: 0;
+  padding: 0;
+  background: #ecfffb52;
+  backdrop-filter: blur(8px);
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.247);
+}
+
+.sidebar li{
+  color: #3d9970;
+  font-weight: 500;
+  font-size: 20px;
+  padding-top: 10px;
+  padding-bottom: 8px;
+}
+
+.sidebar a{
+  width: 100%;
+  padding-left: 15px;
+}
+
+.sidebar a:hover{
+  background-color: #3d99707a;
+  color: #ffffff;
 }
 
 #Hero{
@@ -229,6 +270,7 @@ ul{
   background-repeat: no-repeat;
   background-size: cover;
   border-radius: 10px;
+  margin-bottom: 20px;
 }
 
 
@@ -361,6 +403,7 @@ footer{
   font-weight: 300;
   text-align: center;
   margin-top: 0;
+  margin-bottom: 20px;
 }
 
 .Story{
@@ -411,7 +454,6 @@ footer{
   font-size: 2em;
   font-weight: 400;
   margin-bottom: 5px;
-  /* text-decoration: underline #3d9970; */
 }
 
 .sponsorContents p{
@@ -434,16 +476,9 @@ footer{
 }
 
 
-/*.show{
-  width: 60vw;
-  background-color: aqua;
-  z-index: -100;
-  display: block;
-} */
-
 /* Media Queries */
 /* Small devices (phones, 320px and up) */
-@media (min-width: 320px) and (max-width: 768px) {
+@media  (max-width: 900px) {
   .Navbar {
     font-size: 0.7rem;  
     padding: 8px 0;  
@@ -461,8 +496,10 @@ footer{
   .navitems {
     display: none;  
   }
+
   .menu{
-    display: none;
+    display: block;
+    padding-right: 10px;
   }
 
   #Hero{
@@ -511,6 +548,14 @@ footer{
     font-size: 1.1em;
   }
 
+  .Story{
+    height: 40vh;
+  }
+
+  .story{
+    height: 30vh;
+  }
+
   .container{
     display: flex;
     flex-direction: column;
@@ -522,6 +567,8 @@ footer{
     border-radius:16px 16px 0 0 ;
     text-align: center;
     margin-bottom: 2em;
+    padding-top: 30px;
+    padding-bottom: 30px;
   }
 
   .container .contactform {
@@ -574,11 +621,7 @@ footer{
 }
 
 /* Medium devices (tablets, 768px and up) */
-@media only screen and (min-width: 769px) {
-  #menubar{
-    display: none;
-  }
-
+@media (min-width: 900px){
   .logo{
     font-size: 1.2em;
   }
@@ -589,8 +632,7 @@ footer{
   }
   
   .container .contactInfo{
-    padding-right: 100px;
-    padding: 15px;
+    padding: 30px;
   }
 
   .container .contactform{
