--- a/src/App.css
+++ b/src/App.css
@@ -266,7 +266,7 @@ ul{
   width: 100%;
   height: 400px;
   background-color: #ecfffb;
-  background-image:url(images/background-image.png);
+  background-image:url(/background-image.png);
   background-repeat: no-repeat;
   background-size: cover;
   border-radius: 10px;
